force-app/main/default/objects/Stripe_App_Settings__c/Stripe_App_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Stripe App Settings</label>
</CustomObject>