force-app/main/default/objects/Stripe_App_Settings__c/fields/Cancel_Path__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Path__c</fullName>
    <label>Cancel Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>