force-app/main/default/objects/Stripe_App_Settings__c/fields/Site_Url__c.field-meta.xml
<CustomField>
    <fullName>Site_Url__c</fullName>
    <label>Site Url</label>
    <type>Url</type>
</CustomField>