force-app/main/default/objects/Stripe_App_Settings__c/fields/Success_Path__c.field-meta.xml
<CustomField>
    <fullName>Success_Path__c</fullName>
    <label>Success Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>